Burmistrov_Alexander/14.K8s/Wordpress/gateway-cilium.yaml
apiVersion: v1 
kind: Namespace
metadata:
  name: wordpress
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: wordpress-gateway
  namespace: wordpress
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
